objects/Expense_Item__c.object
<CustomObject>
    <description>This object hold the expense details.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>used to check the status of expense item Amount</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <description>This Field is holding Bill no. having unique values..</description>
        <label>Bill_Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal_Expense_Item__c</fullName>
        <formula>Expense_Amount__c  * 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cal Expense Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This will Hold the Date When A item is purchased</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This will Holds the Description of the item</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <description>It will Holds the Expenses Price</description>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <description>It holds the Picklist in hich we have ddifferent types of Expenses</description>
        <label>Expense Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>This will choose the Expense from Expenses</description>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>formula_text__c</fullName>
        <formula>Bill_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula text</label>
        <type>Text</type>
    </fields>
    <label>Expense Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Check_Expense</fullName>
        <active>true</active>
        <errorConditionFormula>Expense__r.Available_Balance__c &lt; Expense_Amount__c</errorConditionFormula>
        <errorDisplayField>Expense__c</errorDisplayField>
        <errorMessage>You don’t have sufficient balance</errorMessage>
    </validationRules>
</CustomObject>